# chapter_portal_backend

./: .env.local  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml
alembic/: env.py  script.py.mako
alembic/versions/: 131b27c8009b_added_actions_tables.py  211b8137920f_added_sports_table.py  2858c0da24a5_added_user_to_updates_tables.py  2d9b0a4e54cc_removed_username_from_users_table.py  2e6e034a2f54_added_icon_to_sections_tables.py  39c7f3d8e4b7_added_teams_table.py  3a74aaac1648_added_health_tables.py  6ebfe599eb2f_added_week_to_health_table.py  6fde3b095160_added_meetings_tables.py  8928791063aa_added_chapter_table.py  8a268eb75b0e_added_inventory_models.py  8b67672138a7_added_inventory_tables.py  97a8e6f4472b_add_chapters_table.py  a56327d85b6b_updated_events_table.py  a7008d7d6909_added_is_deleted_to_sections_table.py  a8ff779eb2b9_added_allocations_tables.py  ac0b6e20240f_add_matches_table.py  af935cbd3750_added_users_table.py  b1009b09c070_added_rag_guide_to_health_questions.py  b3c2204e90a5_updated_events_table.py  d559e431dbe6_add_membership_table.py  d78868de1148_added_visits_tables.py  da31c96d345d_added_update_tables.py  db47fbe8d33e_add_committee_members_table.py  de1a64ea4425_added_completed_date_to_action_table.py  de1e7959332f_removed_not_null_constraints.py  eb4f3096f367_add_events_tables.py  f1c32714f002_add_pitches_and_stages_table.py  f90f193cc111_added_natcom_buddy_to_committee_member_.py
backend/: config.py  database.py  helpers.py  main.py  middleware.py  schemas.py  urls.py  utils.py
backend/actions/: actions_models.py  actions_routes.py  actions_schemas.py
backend/allocations/: allocation_models.py  allocation_routes.py  allocation_schemas.py
backend/chapters/: chapters_models.py  chapters_routes.py  chapters_schemas.py
backend/commands/: get_paginated_result.py  pagination_commands.py
backend/committee/: committee_models.py
backend/committees/: commitee_schemas.py  committee_models.py  committee_routes.py
backend/events/: event_models.py  event_routes.py  event_schemas.py
backend/health/: health_models.py  health_routes.py
backend/inventory/: inventory_models.py  inventory_routes.py  inventory_schemas.py
backend/meetings/: meetings_models.py  meetings_routes.py  meetings_schemas.py
backend/membership/: membership_models.py  membership_schemas.py  memebrship_routes.py
backend/updates/: update_routes.py  updates_models.py  updates_schemas.py
backend/users/: users_models.py  users_routes.py  users_schemas.py
backend/users/users_commands/: chapter_user.py  (+6 more)
backend/visits/: visits_models.py  visits_routes.py  visits_schemas.py
scripts/: generate-migration.sh  make_new_migations.sh  pytest_with_coverage.sh  run.sh
testing/: test_alembic.py
testing/fixtures/: client.py  database.py
testing/helpers/: fake_data.py
testing/unit_tests/: test_main.py  test_schemas.py  test_urls.py  test_utils.py
(+17 files in other folders)
