[tool.poetry]
name = "NHSF_Backend"
version = "0.1.0"
description = "Backend for NHSF"
authors = ["Shivam Patel <shivam.patel@dwelt.io>"]
license = "PROPRIETARY"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
apscheduler = "^3.10.1"
pytz = "^2023.3"
twilio = "^8.4.0"
sendgrid = "^6.10.0"
boto3 = "^1.28.3"
rsa = "^4.9"
requests = "^2.31.0"
pem = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pre-commit = "^3.2.2"
httpx = "^0.24.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
ruff = "^0.0.272"
black = "^23.3.0"
isort = "^5.12.0"
faker = "^18.11.2"
python-dateutil = "^2.8.2"
sphinx-rtd-theme = "^1.2.2"
pytest-profiling = "^1.7.0"
responses = "^0.23.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = ["A003", "D400","D203", "D212", "D407", "D415", "E501", "ERA001", "FIX002",
    "FBT00", "I001", "INP001", "N805", "PLW0603", "RET505", "S101", "TD002", "TD003"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN",
    "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC",
    "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM",
    "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/env.py" = ["F403"]
"alembic/versions/*.py" = ["D103"]
"backend/middleware.py" = ["ANN"]
"backend/utils.py" = ["B008"]
"testing/unit_tests/*" = ["F811"]
"testing/helpers/fake_s3.py" = ["ARG002"]
"testing/helpers/fake_pdf_service.py" = ["ARG002"]
"testing/unit_tests/helper_client/test_pdf_service.py" = ["ANN"]


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["alembic", "backend", "testing"]

[tool.coverage.report]
exclude_also = [
    "def merge_upgrade_ops() -> None:",
    "def merge_downgrade_ops() -> None:",
    "if TYPE_CHECKING:",
    ]